tests/error/effects_errors/repeated_effects.err
Error: Invalid annotation (at $FILE:7:48)
  | 
5 | 
6 | @guppy.declare
7 | def foo() -> Callable[[int], int] @ effects() @ effects(ANY):
  |                                                 ^^^^^^^^^^^^ Effects have already been applied to this `Callable` type

Guppy compilation failed due to 1 previous error
